revert back to Liz paths

--- a/CompareArrays.ipynb
+++ b/CompareArrays.ipynb
@@ -46,8 +46,8 @@
     "img18_tta = nib.load('../18and20Output_tta4/sub018_seg_g0.01.nii.gz')\n",
     "img20_tta = nib.load('../18and20Output_tta4/sub020_seg_g0.01.nii.gz')\n",
     "\n",
-    "img18_pre = nib.load('../18and20/sub018_seg_g0.01.nii.gz')\n",
-    "img20_pre = nib.load('../18and20/sub020_seg_g0.01.nii.gz')\n",
+    "img18_pre = nib.load('./18and20/sub018_seg_g0.01.nii.gz')\n",
+    "img20_pre = nib.load('./18and20/sub020_seg_g0.01.nii.gz')\n",
     "\n",
     "data18_pre = img18_pre.get_fdata()\n",
     "data20_pre = img20_pre.get_fdata()\n",
@@ -62,20 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "214ff8af",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     20\u001b[39m     diff_img = nib.Nifti1Image(data_diff, img1.affine, img1.header)\n\u001b[32m     21\u001b[39m     nib.save(diff_img, path)\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m \u001b[43mcreate_diff_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg18_pre\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg18_predict\u001b[49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m../18and20Output_predict4/18predict_diff.nii\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     25\u001b[39m create_diff_image(img18_pre, img18_tta,\u001b[33m'\u001b[39m\u001b[33m../18and20Output_tta4/18tta_diff.nii\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 10\u001b[39m, in \u001b[36mcreate_diff_image\u001b[39m\u001b[34m(img1, img2, path)\u001b[39m\n\u001b[32m      8\u001b[39m data_diff = data1 - data2\n\u001b[32m      9\u001b[39m affine = img1.affine\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m img_min = \u001b[43mnp\u001b[49m.min(data_diff)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#scale image\u001b[39;00m\n\u001b[32m     14\u001b[39m data_diff -= img_min\n",
-      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "255.0\n",
+      "0.0\n",
+      "255.0\n"
      ]
     }
    ],
